--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>Pokemon</h1>
+    <div class="container">
+      <div class="pokemon-name"></div>
+      <div class="info"></div>
+    </div>
+    <script src="script.js" defer></script>
   </body>
 </html>
