--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <h1>Pokemon</h1>
     <div class="container">
       <div class="pokemon-name"></div>
-      <div class="info"></div>
+      <div class="poke-type"></div>
+      <img src="" />
+      <div class="info">
+        <div class="stats">
+          <h2>Stats</h2>
+        </div>
+      </div>
     </div>
     <script src="script.js" defer></script>
   </body>
