--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   </head>
   <body>
     <h1>Pokemon</h1>
+
+    <div class="form">
+      <input placeholder="pokemon" type="text" id="pokemon" name="pokemon" />
+      <button type="submit">Who's That Pokemon!?</button>
+    </div>
+
     <div class="container">
       <div class="pokemon-name"></div>
       <div class="poke-type"></div>
       <img src="" />
       <div class="info">
         <div class="stats">
-          <h2>Stats</h2>
+          <h2>Base Stats</h2>
         </div>
       </div>
     </div>
