added to blank html

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </div>
 
     <div class="container">
-      <div class="pokemon-name"></div>
-      <div class="poke-type"></div>
-      <img src="" />
+      <div class="pokemon-name">Pokemon</div>
+      <div class="poke-type">Type: none</div>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pokémon_logo.svg"
+      />
       <div class="info">
         <div class="stats">
           <h2>Base Stats</h2>
+          <div class="empty">None</div>
         </div>
       </div>
     </div>
